@@ -5,7 +5,7 @@
     button-disabled-bg: gainsboro;
     button-hover: limegreen;
     button-text: black;
-    close: red;
+    close: firebrick;
     contrast: white;
     control-text: gray;
     error-bg: lightpink;
@@ -52,7 +52,7 @@ body {
     display: inline-block; text-align: left; vertical-align: top;
     caption {
         font-family: #fonts[system]; text-align: left;
-        text-transform: uppercase;
+        text-transform: uppercase; white-space: nowrap;
     }
     table {
         border-collapse: collapse; display: block; margin: 0.25rem 0 0.5rem;
